frontend/k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: management-app
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
